<resources>
    <string name="app_name">MyShop</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">专题</string>
    <string name="title_notifications">分类</string>
    <string name="title_cart">购物车</string>
    <string name="title_own">我的</string>

    <string name="title">仿网易严选</string>
    <string name="up">上一页</string>
    <string name="down">下一页</string>
    <string name="title_activity_login_activity">LoginActivity</string>
    <string name="title_activity_register_activity">RegisterActivity</string>
    <string name="login">登录</string>
    <string name="reg">注册</string>
    <string name="register">注册账号</string>
    <string name="wjpwd">忘记密码</string>

    <string name="css_goods">
        html,body,p{
            padding:0px;
            margin:0px;
            text-align:center;
        }
        img{
            width:100%;
            top:0;
            bottom:0;
            left:0;
            right:0;
            margin:auto;
        }
    </string>
    <string name="css_goods2">
        html,body{
            padding:0px;
            margin:0px;
            text-align:center;
        }
        img{
            width:100%;
            top:0;
            bottom:0;
            left:0;
            right:0;
            margin:auto;
        }
    </string>
</resources>
